NetBSD Problem Report #51672

From www@NetBSD.org  Tue Nov 29 10:18:22 2016
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [199.233.217.200])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id 3FEB87A2CC
	for <gnats-bugs@gnats.NetBSD.org>; Tue, 29 Nov 2016 10:18:22 +0000 (UTC)
Message-Id: <20161129101821.71A6F7A32A@mollari.NetBSD.org>
Date: Tue, 29 Nov 2016 10:18:21 +0000 (UTC)
From: dcb314@hotmail.com
Reply-To: dcb314@hotmail.com
To: gnats-bugs@NetBSD.org
Subject: src/sys/arch/x86/pci/if_vmx.c:2555: suspicious bit mask ?
X-Send-Pr-Version: www-1.0

>Number:         51672
>Category:       kern
>Synopsis:       src/sys/arch/x86/pci/if_vmx.c:2555: suspicious bit mask ?
>Confidential:   no
>Severity:       non-critical
>Priority:       low
>Responsible:    hikaru
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Nov 29 10:20:00 +0000 2016
>Closed-Date:    Tue Nov 29 23:54:07 +0000 2016
>Last-Modified:  Tue Nov 29 23:54:07 +0000 2016
>Originator:     David Binderman
>Release:        cvs-20161129
>Organization:
>Environment:
>Description:
[src/sys/arch/x86/pci/if_vmx.c:2555]: (style) Same expression on both sides of '|'.

Source code is

    if (m->m_pkthdr.csum_flags &
        (M_CSUM_TCPv4 | M_CSUM_TCPv4 | M_CSUM_TSOv4 | M_CSUM_TSOv6)) {

Maybe

    if (m->m_pkthdr.csum_flags &
        (M_CSUM_TCPv4 | M_CSUM_TCPv6 | M_CSUM_TSOv4 | M_CSUM_TSOv6)) {

was intended ?
>How-To-Repeat:

>Fix:

>Release-Note:

>Audit-Trail:

Responsible-Changed-From-To: kern-bug-people->hikaru
Responsible-Changed-By: maya@NetBSD.org
Responsible-Changed-When: Tue, 29 Nov 2016 10:36:43 +0000
Responsible-Changed-Why:
over to the committer of the code in question, what do you think?


From: "David A. Holland" <dholland@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/51672 CVS commit: src/sys/arch/x86/pci
Date: Tue, 29 Nov 2016 22:27:09 +0000

 Module Name:	src
 Committed By:	dholland
 Date:		Tue Nov 29 22:27:09 UTC 2016

 Modified Files:
 	src/sys/arch/x86/pci: if_vmx.c

 Log Message:
 PR 51672 David Binderman: M_CSUM_TCPv6, not 2x M_CSUM_TCPv4.
 (from context it's quite clear that's what's supposed to be here)


 To generate a diff of this commit:
 cvs rdiff -u -r1.10 -r1.11 src/sys/arch/x86/pci/if_vmx.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

From: David Holland <dholland-bugs@netbsd.org>
To: gnats-bugs@netbsd.org
Cc: 
Subject: Re: PR/51672 CVS commit: src/sys/arch/x86/pci
Date: Tue, 29 Nov 2016 23:40:59 +0000

 On Tue, Nov 29, 2016 at 10:30:01PM +0000, David A. Holland wrote:
  >  Log Message:
  >  PR 51672 David Binderman: M_CSUM_TCPv6, not 2x M_CSUM_TCPv4.
  >  (from context it's quite clear that's what's supposed to be here)

 of course Murphy's Law dictates that if I stick out my neck like this
 I'll be wrong, if not now next time... :-)

 -- 
 David A. Holland
 dholland@netbsd.org

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Tue, 29 Nov 2016 23:54:07 +0000
State-Changed-Why:
committed, thanks


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.